log
Mon 06 May 2024 11:36:58 PM UTC: 
 tests:  1|8
total_score: 0/70
42b9628
Thu 09 May 2024 12:57:47 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|8
total_score: 0/70
360c70b
Thu 09 May 2024 12:58:48 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:48:5: error: expected identifier or ‘(’ before ‘return’
   48 |     return NULL;
      |     ^~~~~~
treemap.c:49:1: error: expected identifier or ‘(’ before ‘}’ token
   49 | }
      | ^
Compilation failed
ced0990
Thu 09 May 2024 12:58:55 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
d8a6ccb
